-Added new cursor -Fixed some transitions -Fixed letter spacing

--- a/public/styles/style.sass
+++ b/public/styles/style.sass
@@ -16,6 +16,14 @@ body
     display: flex
     flex-direction: column
 
+#cursor
+    width: 3px
+    height: 35px
+    background-color: $maincolor
+    border-radius: 5px
+    position: absolute  
+    opacity: 0.8
+
 .header
     width: 100%
     height: 100px
@@ -123,11 +131,13 @@ body
                 display: inline-flex
                 align-items: center
                 transition: 0.1s
+                letter-spacing: 1px
 
                 span
                     padding: 0 0
                     height: 60%
-                    opacity: 0.2
+                    color: rgba(255,255,255,0.20)
+                    position: relative
         
         .contentbox-wordsinp
             position: absolute
@@ -164,7 +174,6 @@ body
                 color: white
                 font-weight: lighter
                 margin-top: 10px 
-
 
     button
         width: 75px
